--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "collections"
+name = "little-collections"
 version = "3.1.0"
 edition = "2024"
 description = "Rust crate that provides a some types of collections, such as heap array and ring buffer"
